k8s/chat-redis-follower.yml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redis-follower # Unique name for the deployment
  labels:
    app: redis # Labels to be applied to this resource
    role: follower
    tier: backend
spec:
  replicas: 2 # Run a single pod in the deployment
  selector:
    matchLabels: # This deployment applies to the Pods matching these labels
      app: redis
      role: follower
      tier: backend
  template: # Template for the pods that will be created by this deployment
    metadata:
      labels: # Labels to be applied to the Pods in this deployment
        app: redis
        role: follower
        tier: backend
    spec: # Spec for the container which will be run inside the Pod.
      containers:
        - name: follower
          image: gcr.io/google_samples/gb-redis-follower:v2
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
