k8s/user-postgres.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres # Sets Deployment name
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: moffyblack/chat-postgres:1.0.0 # Sets Image
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 5432 # Exposes container port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service # Sets service name
  labels:
    app: postgres # Labels and Selectors
spec:
  ports:
    - port: 5432 # Sets port to run the postgres application
      targetPort: 5432
  selector:
    app: postgres
